# cubecrafter

./: .gitignore  .gitmodules  LICENSE  README.md  Todo.txt  cmakebuild.bat
Resources/Shaders/: shader.frag.glsl  shader.vert.glsl
Source/: CMakeLists.txt
Source/Dependencies/glad/: CMakeLists.txt
Source/Dependencies/glad/include/glad/: glad.h
Source/Dependencies/glad/src/: glad.c
Source/cubedcrafter/: asserts.h  main.cpp
Source/cubedcrafter/entities/: camera.cpp  camera.h  entity.cpp  entity.h
Source/cubedcrafter/graphics/: mesh.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
